kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
spec:
  selector:
    app: kavita
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
