kavita/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: kavita
spec:
  ingressClassName: traefik
  rules:
  - host: kavita.yashbhangale.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kavita
            port:
              number: 5000
